--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ phone📞: 01101939649
     <div class="info-container">
         <div class="info-box">
             <h3>Rate </h3>
-            <p>143</p>
+            <p>150</p>
         </div>
         <div class="info-box">
-            <h3>meeting</h3>
-            <p>65%</p>
+            <h3>Evaluation</h3>
+            <p>Acept</p>
         </div>
     </div>
 </div>
