--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ phone📞: 01101939649
         </div>
         <div class="info-box">
             <h3>Evaluation</h3>
-            <p>Acept</p>
+            <p>Accept</p>
         </div>
     </div>
 </div>
